name:                minirev
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.24

executable minirev-no-cunduit
  hs-source-dirs:      src
  main-is:             NoConduitMain.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , bytestring
                     , conduit-extra
                     , http-client
                     , http-reverse-proxy
                     , http-types
                     , wai
                     , wai-extra
                     , warp
                     , streaming-commons
                     , blaze-builder
  default-language:    Haskell2010

executable minirev
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , bytestring
                     , conduit-extra
                     , http-client
                     , http-types
                     , wai
                     , wai-extra
                     , warp
                     , streaming-commons
                     , blaze-builder
  default-language:    Haskell2010

executable minirev-wai
  hs-source-dirs:      src
  main-is:             WaiMain.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , bytestring
                     , conduit-extra
                     , http-client
                     , http-reverse-proxy
                     , http-types
                     , wai
                     , wai-extra
                     , warp
                     , streaming-commons
  default-language:    Haskell2010

executable minirev-raw
  hs-source-dirs:      src
  main-is:             RawMain.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , bytestring
                     , conduit-extra
                     , http-client
                     , http-reverse-proxy
                     , http-types
  default-language:    Haskell2010

executable minirev-raw-buf2kb
  hs-source-dirs:      src
  main-is:             RawBuf2kbMain.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , bytestring
                     , conduit-extra
                     , http-client
                     , http-reverse-proxy
                     , http-types
                     , streaming-commons
  default-language:    Haskell2010
